--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3 has-text-centered">A case visualization of ScenGE</h2>
+      <h2 class="title is-3 has-text-centered">Case Study</h2>
       <div class="hero-body">
         <img src="static/images/vis_00.png" alt="MY ALT TEXT"/>
           <h2 class="subtitle has-text-centered">
